--- a/mgmt/templates/mgmt/undo_deduction.html
+++ b/mgmt/templates/mgmt/undo_deduction.html
@@ -44,9 +44,9 @@
                     <div class="col-md-6">
                         <h6>After Undo:</h6>
                         <ul class="list-unstyled">
-                            <li><strong>Current Balance:</strong> {{ transaction.user.credits }} credits</li>
-                            <li><strong>Credits to Add Back:</strong> <span class="text-success">+{{ credits_to_add_back }} credits</span></li>
-                            <li><strong>New Balance:</strong> <span class="text-success">{{ new_balance }} credits</span></li>
+                            <li><strong>Current Balance:</strong> {{ transaction.user.credits }} crown credits</li>
+                            <li><strong>Crown Credits to Add Back:</strong> <span class="text-success">+{{ credits_to_add_back }} crown credits</span></li>
+                            <li><strong>New Balance:</strong> <span class="text-success">{{ new_balance }} crown credits</span></li>
                         </ul>
                         
                         {% if transaction.notes %}
