--- a/mgmt/templates/mgmt/add_dentist.html
+++ b/mgmt/templates/mgmt/add_dentist.html
@@ -76,7 +76,7 @@
     </div>
     
     <div class="col-md-6">
-        <div class="card bg-light">
+        <div class="card">
             <div class="card-body">
                 <h5 class="card-title">About Dentist Management</h5>
                 <p class="card-text">When you add a dentist:</p>
