--- a/mgmt/templates/mgmt/purchase_credits.html
+++ b/mgmt/templates/mgmt/purchase_credits.html
@@ -6,10 +6,10 @@
     <div class="row">
         <div class="col-12">
             <div class="d-flex justify-content-between align-items-center mb-4">
-                <h2>Purchase Credits</h2>
+                <h2>Purchase Crown Credits</h2>
                 <div>
                     <span class="text-muted">Current Balance: </span>
-                    <span class="badge bg-success fs-6">{{ current_credits }} credits</span>
+                    <span class="badge bg-success fs-6">{{ current_credits }} crown credits</span>
                 </div>
             </div>
             
